Fixing the spacing on the front page categories.

--- a/packages/custom/rizers/public/assets/css/rize/rize.less
+++ b/packages/custom/rizers/public/assets/css/rize/rize.less
@@ -1248,7 +1248,7 @@ a {
 		font-size: 1.5rem;
 	}
 	.rize-list-categories-link{
-		min-height: 240px; 
+		//min-height: 100px; 
 	}
 
 	.rize-list-categories {
@@ -1268,7 +1268,6 @@ a {
 	.rize-list-categories-icon {
 		height: 100px;
 		width: 100px;
-
 		background-color: rgba(0, 160, 0, .8);
 		border: none;
 	}
