--- a/packages/custom/rizers/public/assets/css/rizers.css
+++ b/packages/custom/rizers/public/assets/css/rizers.css
@@ -1343,9 +1343,6 @@ a {
     font-family: 'Arial', sans-serif;
     font-size: 1.5rem;
   }
-  .rize-list-categories-link {
-    min-height: 240px;
-  }
   .rize-list-categories {
     display: table-cell;
     vertical-align: top;
